# cpptoolInit

./: CICD_script.md  CMakeLists.txt  LinuxTrouble.md  README.md  SETduty.md  cppTestFlow.md  print_tree.py  testCppNote.md
include/: sample_head.cpp  sample_head.h
src/: main.cpp
tests/: components_test.cpp  components_test.gcno  sample_head_test.cpp  test_sample_head.cpp
